--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=murthqLtGE1BYBpGTY0jSQLaO33Z2Bco"></script>
     <title>gastronomy</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div id="allmap"></div>
   </body>
 </html>
